syntax = "proto3";
package comdex.lend.v1beta1;

import "gogoproto/gogo.proto";
import "comdex/lend/v1beta1/lend.proto";
import "comdex/lend/v1beta1/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/comdex-official/comdex/x/lend/types";

// GenesisState defines the lend module's genesis state.
message GenesisState {
  repeated BorrowAsset borrowAsset = 1
  [ (gogoproto.moretags) = "yaml:\"borrowAsset\"", (gogoproto.nullable) = false ];
  repeated UserBorrowIdMapping userBorrowIdMapping = 2
  [ (gogoproto.moretags) = "yaml:\"userBorrowIdMapping\"", (gogoproto.nullable) = false ];
  repeated BorrowIdByOwnerAndPoolMapping borrowIdByOwnerAndPoolMapping = 3
  [ (gogoproto.moretags) = "yaml:\"borrowIdByOwnerAndPoolMapping\"", (gogoproto.nullable) = false ];
  repeated BorrowMapping borrowMapping = 4
  [ (gogoproto.moretags) = "yaml:\"borrowMapping\"", (gogoproto.nullable) = false ];
  repeated LendAsset lendAsset = 5
  [ (gogoproto.moretags) = "yaml:\"lendAsset\"", (gogoproto.nullable) = false ];
  repeated Pool pool = 6
  [ (gogoproto.moretags) = "yaml:\"pool\"", (gogoproto.nullable) = false ];
  repeated AssetToPairMapping assetToPairMapping = 7
  [ (gogoproto.moretags) = "yaml:\"assetToPairMapping\"", (gogoproto.nullable) = false ];
  repeated UserLendIdMapping userLendIdMapping = 8
  [ (gogoproto.moretags) = "yaml:\"userLendIdMapping\"", (gogoproto.nullable) = false ];
  repeated LendIdByOwnerAndPoolMapping lendIdByOwnerAndPoolMapping = 9
  [ (gogoproto.moretags) = "yaml:\"lendIdByOwnerAndPoolMapping\"", (gogoproto.nullable) = false ];
  repeated LendIdToBorrowIdMapping lendIdToBorrowIdMapping = 10
  [ (gogoproto.moretags) = "yaml:\"lendIdToBorrowIdMapping\"", (gogoproto.nullable) = false ];
  repeated AssetStats assetStats = 11
  [ (gogoproto.moretags) = "yaml:\"assetStats\"", (gogoproto.nullable) = false ];
  repeated LendMapping lendMapping = 12
  [ (gogoproto.moretags) = "yaml:\"lendMapping\"", (gogoproto.nullable) = false ];
  repeated DepositStats depositStats = 13
  [ (gogoproto.moretags) = "yaml:\"depositStats\"", (gogoproto.nullable) = false ];
  repeated Extended_Pair extended_Pair = 14
  [ (gogoproto.moretags) = "yaml:\"extended_Pair\"", (gogoproto.nullable) = false ];
  repeated AssetRatesStats assetRatesStats = 15
  [ (gogoproto.moretags) = "yaml:\"assetRatesStats\"", (gogoproto.nullable) = false ];
  Params params = 16 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
