syntax = "proto3";
package comdex.lend.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/comdex-official/comdex/x/lend/types";

message Lend_Asset {
  uint64 lending_id = 1
  [(gogoproto.customname) = "ID", (gogoproto.moretags) = "yaml:\"lending_id\""];

  uint64 pair_id = 2 [
    (gogoproto.customname) = "PairID",
    (gogoproto.moretags) = "yaml:\"pair_id\""
  ];

  string owner = 3 [(gogoproto.moretags) = "yaml:\"owner\""];

  cosmos.base.v1beta1.Coin amount_in = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"amount_in\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];

  google.protobuf.Timestamp lending_time = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"lending_time\""
  ];

  cosmos.base.v1beta1.Coin reward = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"reward\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];

}